<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Tui la The Khai"
                android:textColor="#673AB7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnClick"
                android:layout_width="218dp"
                android:layout_height="49dp"
                android:layout_marginTop="24dp"
                android:onClick="say_hello"
                android:text="Click me!" />

            <Button
                android:id="@+id/btnClose"
                android:layout_width="228dp"
                android:layout_height="46dp"
                android:layout_marginTop="16dp"
                android:onClick="close_app"
                android:text="Close!" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_youruni"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnClose" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_youruni" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="show_major"
                android:text="@string/str_show_major" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_opencal"
                android:onClick="open_cal"/>

            <Button
                android:id="@+id/btn_order_management"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="open_order_management"
                android:text="@string/str_order_management_title" />

            <Button
                android:id="@+id/btn_category_management"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="open_category_management"
                android:text="@string/str_category_management_title" />

            <Button
                android:id="@+id/btn_my_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="open_my_contacts"
                android:text="@string/str_my_contacts_title" />

            <Button
                android:id="@+id/btn_sms_spyware"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="open_sms_spyware"
                android:text="@string/str_sms_spyware_title" />

            <Button
                android:id="@+id/btn_multithread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="open_multi_thread"
                android:text="@string/str_multithread_title" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>